--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
 
       <section class="benefits section">
         <div class="container">
-          <h2 class="title2 hidden">Benefits</h2>
+          <h2 class="title2" hidden>Benefits</h2>
           <ul class="benefits-grid">
             <li class="feature">
+              <div class="feature-icons">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title3">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +77,11 @@
               </p>
             </li>
             <li class="feature">
+              <div class="feature-icons">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title3">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +89,11 @@
               </p>
             </li>
             <li class="feature">
+              <div class="feature-icons">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title3">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
@@ -86,6 +101,11 @@
               </p>
             </li>
             <li class="feature">
+              <div class="feature-icons">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title3">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -136,6 +156,36 @@
               <div class="team-name">
                 <h3 class="title3">Mark Guerrero</h3>
                 <p>Product Designer</p>
+                <ul class="social-items">
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -143,6 +193,36 @@
               <div class="team-name">
                 <h3 class="title3">Tom Ford</h3>
                 <p>Frontend Developer</p>
+                <ul class="social-items">
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -150,6 +230,36 @@
               <div class="team-name">
                 <h3 class="title3">Camila Garcia</h3>
                 <p>Marketing</p>
+                <ul class="social-items">
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -157,7 +267,74 @@
               <div class="team-name">
                 <h3 class="title3">Daniel Wilson</h3>
                 <p>UI Designer</p>
+                <ul class="social-items">
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-item">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section customers">
+        <div class="container">
+          <h2 class="title2">Customers</h2>
+          <ul class="customers-list">
+            <li class="customer-item">
+              <svg class="customer-icon">
+                <use href="/images/icons.svg#icon-customer1"></use>
+              </svg>
+            </li>
+            <li class="customer-item">
+              <svg class="customer-icon">
+                <use href="/images/icons.svg#icon-customer2"></use>
+              </svg>
+            </li>
+            <li class="customer-item">
+              <svg class="customer-icon">
+                <use href="/images/icons.svg#icon-customer3"></use>
+              </svg>
+            </li>
+            <li class="customer-item">
+              <svg class="customer-icon">
+                <use href="/images/icons.svg#icon-customer4"></use>
+              </svg>
+            </li>
+            <li class="customer-item">
+              <svg class="customer-icon">
+                <use href="/images/icons.svg#icon-customer5"></use>
+              </svg>
+            </li>
+            <li class="customer-item">
+              <svg class="customer-icon">
+                <use href="/images/icons.svg#icon-customer6"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -165,13 +342,50 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="web">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-columns">
+          <div class="footer-column1">
+            <a href="./index.html" class="logo"
+              ><span class="web">Web</span>Studio</a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-column2">
+            <p>Social media</p>
+            <ul class="social-items">
+              <li>
+                <a href="" class="social-item">
+                  <svg class="social-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-item">
+                  <svg class="social-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-item">
+                  <svg class="social-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-item">
+                  <svg class="social-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
