--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     </header>
     <main>
       <section class="container section-portfolio">
-        <h1 class="title1 hidden">Portfolio</h1>
+        <h1 class="title1" hidden>Portfolio</h1>
         <!--Navigation tabs-->
         <ul class="projects-nav">
           <li class="project-tab">
@@ -224,13 +224,50 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="web">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-columns">
+          <div class="footer-column1">
+            <a href="./index.html" class="logo"
+              ><span class="web">Web</span>Studio</a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-column2">
+            <p>Social media</p>
+            <ul class="social-items">
+              <li>
+                <a href="" class="social-item">
+                  <svg class="social-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-item">
+                  <svg class="social-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-item">
+                  <svg class="social-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="social-item">
+                  <svg class="social-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
