Fixes customers block

--- a/index.html
+++ b/index.html
@@ -308,32 +308,32 @@
           <ul class="customers-list">
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/icons.svg#icon-customer1"></use>
+                <use href="./images/icons.svg#icon-customer1"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/icons.svg#icon-customer2"></use>
+                <use href="./images/icons.svg#icon-customer2"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/icons.svg#icon-customer3"></use>
+                <use href="./images/icons.svg#icon-customer3"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/icons.svg#icon-customer4"></use>
+                <use href="./images/icons.svg#icon-customer4"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/icons.svg#icon-customer5"></use>
+                <use href="./images/icons.svg#icon-customer5"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/icons.svg#icon-customer6"></use>
+                <use href="./images/icons.svg#icon-customer6"></use>
               </svg>
             </li>
           </ul>
