--- a/index.html
+++ b/index.html
@@ -64,48 +64,28 @@
         <div class="container">
           <h2 class="title2" hidden>Benefits</h2>
           <ul class="benefits-grid">
-            <li class="feature">
-              <div class="feature-icons">
-                <svg class="feature-icon">
-                  <use href="./images/icons.svg#icon-antenna"></use>
-                </svg>
-              </div>
+            <li class="feature antenna">
               <h3 class="title3">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="feature">
-              <div class="feature-icons">
-                <svg class="feature-icon">
-                  <use href="./images/icons.svg#icon-clock"></use>
-                </svg>
-              </div>
+            <li class="feature clock">
               <h3 class="title3">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="feature">
-              <div class="feature-icons">
-                <svg class="feature-icon">
-                  <use href="./images/icons.svg#icon-diagram"></use>
-                </svg>
-              </div>
+            <li class="feature diagram">
               <h3 class="title3">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="feature">
-              <div class="feature-icons">
-                <svg class="feature-icon">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
-                </svg>
-              </div>
+            <li class="feature astranaut">
               <h3 class="title3">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -306,35 +286,47 @@
         <div class="container">
           <h2 class="title2">Customers</h2>
           <ul class="customers-list">
-            <li class="customer-item">
-              <svg class="customer-icon">
-                <use href="./images/icons.svg#icon-customer1"></use>
-              </svg>
+            <li>
+              <a href="" class="customer-item">
+                <svg class="customer-icon">
+                  <use href="./images/icons.svg#icon-customer1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-item">
-              <svg class="customer-icon">
-                <use href="./images/icons.svg#icon-customer2"></use>
-              </svg>
+            <li>
+              <a href="" class="customer-item">
+                <svg class="customer-icon">
+                  <use href="./images/icons.svg#icon-customer2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-item">
-              <svg class="customer-icon">
-                <use href="./images/icons.svg#icon-customer3"></use>
-              </svg>
+            <li>
+              <a href="" class="customer-item">
+                <svg class="customer-icon">
+                  <use href="./images/icons.svg#icon-customer3"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-item">
-              <svg class="customer-icon">
-                <use href="./images/icons.svg#icon-customer4"></use>
-              </svg>
+            <li>
+              <a href="" class="customer-item">
+                <svg class="customer-icon">
+                  <use href="./images/icons.svg#icon-customer4"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-item">
-              <svg class="customer-icon">
-                <use href="./images/icons.svg#icon-customer5"></use>
-              </svg>
+            <li>
+              <a href="" class="customer-item">
+                <svg class="customer-icon">
+                  <use href="./images/icons.svg#icon-customer5"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-item">
-              <svg class="customer-icon">
-                <use href="./images/icons.svg#icon-customer6"></use>
-              </svg>
+            <li>
+              <a href="" class="customer-item">
+                <svg class="customer-icon">
+                  <use href="./images/icons.svg#icon-customer6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
