Replaces backgrounds with inline svg, adds  hidden class

--- a/index.html
+++ b/index.html
@@ -62,30 +62,50 @@
 
       <section class="benefits section">
         <div class="container">
-          <h2 class="title2" hidden>Benefits</h2>
+          <h2 class="title2 visually-hidden">Benefits</h2>
           <ul class="benefits-grid">
-            <li class="feature antenna">
+            <li class="feature">
+              <div class="feature-icons">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title3">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="feature clock">
+            <li class="feature">
+              <div class="feature-icons">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title3">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="feature diagram">
+            <li class="feature">
+              <div class="feature-icons">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title3">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="feature astranaut">
+            <li class="feature">
+              <div class="feature-icons">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title3">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
