--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     </header>
     <main>
       <section class="container section-portfolio">
-        <h1 class="title1" hidden>Portfolio</h1>
+        <h1 class="title1 visually-hidden">Portfolio</h1>
         <!--Navigation tabs-->
         <ul class="projects-nav">
           <li class="project-tab">
