Adds container to hero section

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <main>
       <!--Hero section-->
       <section class="hero">
-        <h1 class="title1">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-cta">Order Service</button>
+        <div class="container">
+          <h1 class="title1">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-cta">Order Service</button>
+        </div>
       </section>
 
       <!--Our advantages section-->
